# aineverforget

./: .gitignore  BUILD_LOG.md  CODE-REVIEW-LOG.md  CODEX-FIXLIST-PHASE-E.md  CONTEXT.md  PLAN-REVIEW-LOG.md  PLAN.md  README.md  docker-compose.yml  pyproject.toml
.agents/skills/ask/: SKILL.md
.agents/skills/ingest/: SKILL.md
.claude/agentspec/kb/: _index.yaml
.claude/agentspec/shared/: self-report-contract.md
.claude/skills/ask/: SKILL.md
.claude/skills/ingest/: SKILL.md
.codex/agentspec/shared/: self-report-contract.md
.codex/rules/: agent-registry.md
.codex/skills/ask/: SKILL.md
.codex/skills/ingest/: SKILL.md
.github/workflows/: eval.yml
docs/adr/: 0001-orchestrator-as-skill-one-level-nesting.md  0002-single-hybrid-collection-bge-m3.md  0003-eval-gated-agents-runtime-vs-devtime.md
docs/superpowers/plans/: 2026-06-16-docx-loader-unknown-ext.md
docs/superpowers/specs/: 2026-06-16-docx-loader-unknown-ext-design.md
scripts/: debug_verify.py  eval_gate_synthesis.py  eval_note_summarizer.py  eval_retrieval.py  eval_scorers.py  gate_synthesis.py  run_journal.py  smoke_real.py
src/aineverforget/: __init__.py  chunking.py  cli.py  config.py  embedding.py  identity.py  ingest.py  models.py  run_journal.py  run_lock.py  store.py  verify.py
tests/: conftest.py  test_chunking.py  test_chunking_docx.py  test_cli.py  test_embedding.py  test_gate_synthesis.py  test_identity.py  test_ingest.py  test_loaders.py  test_models.py  test_run_journal.py  test_store.py  test_verify.py
tests/phase_f/: phase_e_architecture.md  raw_note.md  raw_note_summary.md
(+37 files in other folders)
